<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal|center">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.popularmovies.DetailActivity"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_detail_imageView_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_picture_content_description"
                android:scaleType="fitXY" />


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:padding="@dimen/activity_detailView_padding"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/original_title"
                android:layout_width="wrap_content"
                android:text="@string/movie_original_title"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_detailView_padding"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/populariry"
                android:layout_width="wrap_content"
                android:text="@string/Popularity"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_detailView_padding"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_average"
                android:padding="@dimen/activity_detailView_padding"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:padding="@dimen/activity_detailView_padding"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:padding="@dimen/activity_detailView_padding"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/addToFavorite"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/activity_detailView_padding"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addFavorite"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:textStyle="bold" />

                <CheckBox
                    android:button="@android:drawable/btn_star"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favoriteCheckbox"
                    android:background="@android:color/transparent"
                    android:onClick="onCheckboxClicked"
                    android:layout_gravity="center"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/trailerAndReview"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true">
                <Button
                    android:id="@+id/Trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/detail_view_button_weight"
                    android:text="Watch trailer">
                </Button>

                <Button
                    android:id="@+id/Reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/detail_view_button_weight"
                    android:text="Reviews">
                </Button>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>